[package]
name = "zkp-chaum-pedersen"
version = "0.1.0"
edition = "2024"

[dependencies]
crypto-bigint = { version = "0.7.3", features = ["rand_core", "zeroize"] }
env_logger = "0.11.10"
hex = "0.4.3"
log = "0.4.29"
prost = "0.14.3"
rand = "0.10.1"
rand_core = "0.10.1"
sha2 = "0.11.0"
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros"] }
tonic = "0.14.5"
tonic-prost = "0.14.5"

[build-dependencies]
tonic-prost-build = "0.14.5"

[[bin]]
name = "server"
path = "./src/server.rs"

[[bin]]
name = "client"
path = "./src/client.rs"

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "zkp_bench"
harness = false
